--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,15 +25,23 @@ services:
 
   showlist:
     build: 
-        context: https://github.com/dremkus/showlist.git
+        context: .
     depends_on:
       - mariadb
     volumes:
       - .:/usr/src/app
+    links:
+      - mariadb
     ports:
       - "8700:8700"
     environment:
       DATABASE_URL: mariadb://root@mariadb/showdb
+      MYSQL_HOST: mariadb
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 40ounce
+      MYSQL_DB: showdb
+      MYSQL_PORT: 3306
+      TEMPLATE_DIR: templates     
 
 volumes:
     63dc31d6b2d092fcac4d6e405096f8de05e34134210db235af1b2256a14d202b: 
