Added apache to compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,29 @@ services:
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
 
+  test.smokin45s.com:
+    image: httpd
+    container_name: apache
+    ports:
+      - 80:80
+      - 443:443
+    environment:
+      HTTPD_PREFIX: /usr/local/apache2
+    volumes:
+      -   test.smokin45s.com:/usr/local/apache2/htdocs
+
   showlist:
+    container_name: showlist
     build: 
         context: .
     depends_on:
       - mariadb
     volumes:
       - .:/usr/src/app
+      - test.smokin45s.com:/usr/local/apache2/htdocs
     links:
       - mariadb
+      - test.smokin45s.com
     ports:
       - "8700:8700"
     environment:
@@ -41,7 +55,9 @@ services:
       MYSQL_PASSWORD: 40ounce
       MYSQL_DB: showdb
       MYSQL_PORT: 3306
-      TEMPLATE_DIR: templates     
+      TEMPLATE_DIR: templates 
+      HTML_DIR: /usr/local/apache2/htdocs    
 
 volumes:
-    63dc31d6b2d092fcac4d6e405096f8de05e34134210db235af1b2256a14d202b: 
+    63dc31d6b2d092fcac4d6e405096f8de05e34134210db235af1b2256a14d202b:
+    test.smokin45s.com:
